<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cefalexin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Cefalexin_name" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Cefalexin_details" />

                    <Button
                        android:id="@+id/cefalexin_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/defacote" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Depakote_name" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Depatoke_short" />

                    <Button
                        android:id="@+id/defacote_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="400sp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/gebotrin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Geborin_name" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Geborin_short" />

                    <Button
                        android:id="@+id/geborin_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/inhusin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Inhusin_capsule_name" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Inhusin_capsule_details" />

                    <Button
                        android:id="@+id/inhusin_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/pensag" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Pensag_name" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Pensag_details" />

                    <Button
                        android:id="@+id/pensag_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tenten" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tenten_name" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Tenten_short" />

                    <Button
                        android:id="@+id/tenten_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tylenol_cold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tylenol_cold_name" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Tylenol_cold_details" />

                    <Button
                        android:id="@+id/tylenol_cold_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tylenol_er" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tylenol_er_name" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Tylenol_er_details" />

                    <Button
                        android:id="@+id/tylenol_er_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400dp"
                    android:layout_height="185dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ModcolS_name" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="99dp"
                        android:layout_weight="1"
                        android:text="@string/ModcolS_details" />

                    <Button
                        android:id="@+id/modcols_more"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:text="@string/More" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="400dp"
                    android:layout_height="159dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Taksen_name" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="@string/Taksen_details" />

                    <Button
                        android:id="@+id/taksen_more"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/More" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/MainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>